force-app/main/default/objects/Event_Registry__c/Event_Registry__c.object-meta.xml
<CustomObject>
    <description>One record per campaign. Its related list holds every registered attendee badge (QR/barcode) for the event.</description>
    <label>Event Registry</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Registries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>