force-app/main/default/objects/Event_Registry__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Event Registries</relationshipLabel>
    <relationshipName>Event_Registries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>