force-app/main/default/objects/Event_Registry__c/fields/Campaign_Key__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Key__c</fullName>
    <description>Set automatically from Campaign; the unique constraint allows one registry per campaign.</description>
    <externalId>true</externalId>
    <label>Campaign Key</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>