force-app/main/default/objects/Event_Registry__c/fields/Checked_In_Count__c.field-meta.xml
<CustomField>
    <fullName>Checked_In_Count__c</fullName>
    <label>Checked In</label>
    <summaryFilterItems>
        <field>Event_Attendee__c.Checked_In__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Event_Attendee__c.Event_Registry__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>