force-app/main/default/objects/Event_Registry__c/fields/Total_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Total_Attendees__c</fullName>
    <label>Total Attendees</label>
    <summaryForeignKey>Event_Attendee__c.Event_Registry__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>