force-app/main/default/objects/Event_Registry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Attendees__c</columns>
    <columns>Checked_In_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>